kubernetes/apps/ntfy/app/route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: ntfy
  namespace: ntfy
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: gateway
  hostnames:
    - "ntfy.blarc.my.id"
  rules:
    - backendRefs:
      - name: ntfy
        port: 80
